# OpenGov-Zoning

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODEOWNERS  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  coverage.json  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  codeql.yml  pages.yml  release.yml
infrastructure/kubernetes/: deployment.yaml
scripts/: publish_to_github.sh
src/opengovzoning/: __init__.py  cli.py
src/opengovzoning/core/: config.py  database.py
src/opengovzoning/core/exceptions/: __init__.py  auth.py  base.py  business.py  database.py  external.py  validation.py
src/opengovzoning/core/security/: middleware.py
src/opengovzoning/dtos/: __init__.py  analysis.py  auth.py  common.py  document.py  project.py
src/opengovzoning/infrastructure/database/: __init__.py  base.py  models.py  session.py
src/opengovzoning/models/: item.py
src/opengovzoning/services/: agent_service.py  ollama_service.py
src/opengovzoning/storage/: item_storage.py
src/opengovzoning/utils/: logging.py
src/opengovzoning/web/: app.py
tests/: conftest.py  test_api.py  test_basic.py  test_comprehensive.py  test_config.py  test_core.py  test_database.py  test_dtos.py  test_performance.py
