[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "OpenGov-Zoning"
version = "1.0.0"
description = "Production-ready FastAPI application for comprehensive land use planning and permitting intelligence system"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Nik Jois"}
]
keywords = ["zoning", "land-use", "permitting", "gis", "municipal", "infrastructure", "fastapi", "api", "zoning-api"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: AsyncIO",
    "Framework :: FastAPI",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.11"
dependencies = [
    # Core FastAPI and async
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "uvloop>=0.18.0; sys_platform != 'win32'",

    # Database and ORM
    "sqlalchemy[asyncio]>=2.0.0",
    "alembic>=1.12.0",
    "aiosqlite>=0.19.0",
    "asyncpg>=0.29.0",

    # Authentication and Security
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    "bcrypt>=4.0.0",

    # Configuration and Settings
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",

    # HTTP Client and Server
    "httpx>=0.25.0",
    "aiohttp>=3.9.0",

    # Caching and Sessions
    "redis[hiredis]>=5.0.0",
    "aioredis>=2.0.0",

    # Background Tasks and Message Queue
    "celery>=5.3.0",
    "flower>=2.0.0",

    # Logging and Monitoring
    "structlog>=23.0.0",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-instrumentation-fastapi>=0.41b0",
    "prometheus-client>=0.20.0",
    "sentry-sdk[fastapi]>=1.30.0",

    # Data Processing and GIS
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "geopandas>=0.13.0",
    "shapely>=2.0.0",
    "fiona>=1.9.0",
    "rasterio>=1.3.0",
    "folium>=0.14.0",

    # Document Processing
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "PyPDF2>=3.0.0",
    "python-docx>=1.1.0",
    "openpyxl>=3.1.0",

    # AI and ML
    "openai>=1.0.0",
    "ollama>=0.2.0",
    "llm>=0.13.0",
    "llm-cmd>=0.1a0",
    "llm-ollama>=0.1.0",
    "tenacity>=8.0.0",

    # CLI and Interface
    "typer>=0.12.0",
    "rich>=13.0.0",
    "questionary>=2.0.0",
    "click>=8.0.0",

    # File Handling
    "aiofiles>=23.0.0",
    "python-multipart>=0.0.6",

    # Templates and Content
    "jinja2>=3.1.0",
    "markdown>=3.5.0",

    # Utilities
    "toml>=0.10.0",
    "pyyaml>=6.0.0",
    "requests>=2.31.0",
    "pytz>=2023.3",
    "python-dateutil>=2.8.0",

    # Rate Limiting and Security
    "slowapi>=0.1.9",
    "limits>=3.7.0",

    # Compression
    "brotli>=1.1.0",
    "zstandard>=0.21.0",

    # Testing (runtime dependencies for test utilities)
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.11.0",
    "httpx>=0.25.0",
    "faker>=19.0.0",
]

[project.optional-dependencies]
# Development dependencies
dev = [
    # Testing
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "pytest-xdist>=3.3.0",
    "pytest-html>=4.1.0",
    "pytest-benchmark>=4.0.0",
    "coverage[toml]>=7.3.0",
    "hypothesis>=6.80.0",
    "faker>=19.0.0",

    # Code Quality
    "black>=23.0.0",
    "isort>=5.12.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "pre-commit>=3.3.0",
    "bandit>=1.7.0",
    "safety>=2.3.0",
    "radon>=6.0.0",

    # Documentation
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.1.0",
    "mkdocstrings>=0.22.0",
    "mkdocstrings-python>=1.6.0",
    "pydocstyle>=6.3.0",

    # Development tools
    "jupyter>=1.0.0",
    "ipykernel>=6.25.0",
    "notebook>=7.0.0",
    "jupyterlab>=4.0.0",
    "tox>=4.6.0",
    "pip-tools>=7.3.0",
]

# Testing dependencies
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "pytest-xdist>=3.3.0",
    "pytest-html>=4.1.0",
    "pytest-benchmark>=4.0.0",
    "coverage[toml]>=7.3.0",
    "httpx>=0.25.0",
    "faker>=19.0.0",
    "testcontainers>=3.7.0",
    "locust>=2.15.0",
]

# Documentation dependencies
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.1.0",
    "mkdocstrings>=0.22.0",
    "mkdocstrings-python>=1.6.0",
    "pydocstyle>=6.3.0",
    "mkdocs-autorefs>=0.5.0",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-literate-nav>=0.6.0",
]

# Performance testing
performance = [
    "locust>=2.15.0",
    "pytest-benchmark>=4.0.0",
    "memory-profiler>=0.61.0",
    "line-profiler>=4.1.0",
]

# Security testing
security = [
    "bandit>=1.7.0",
    "safety>=2.3.0",
    "pip-audit>=2.6.0",
]

# Production dependencies
production = [
    "gunicorn>=21.2.0",
    "uvicorn[standard]>=0.24.0",
    "supervisor>=4.2.0",
]

# All development dependencies
all = [
    "OpenGov-Zoning[dev,test,docs,performance,security]",
]

[project.scripts]
opengov-zoning = "opengovzoning.cli:app"

[project.urls]
Homepage = "https://github.com/llamasearchai/OpenGov-Zoning"
Documentation = "https://llamasearchai.github.io/OpenGov-Zoning"
Repository = "https://github.com/llamasearchai/OpenGov-Zoning"
Issues = "https://github.com/llamasearchai/OpenGov-Zoning/issues"
Changelog = "https://github.com/llamasearchai/OpenGov-Zoning/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/opengovzoning"]

[tool.hatch.envs.default]
python = "3.11"
features = ["dev"]

[tool.hatch.envs.test]
python = "3.11"
features = ["test"]
extra-dependencies = ["coverage[toml]>=7.3.0"]

[tool.hatch.envs.docs]
python = "3.11"
features = ["docs"]

# Tool configurations for code quality and development

[tool.ruff]
line-length = 88
target-version = "py311"
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "RUF", # ruff-specific rules
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "SIM108", # use ternary operator
]

[tool.ruff.per-file-ignores]
"tests/*" = ["B011"]  # assert false
"scripts/*" = ["B011"]
"migrations/*" = ["B008", "E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
namespace_packages = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "llm.*",
    "llm_cmd.*",
    "llm_ollama.*",
    "sqlite_utils.*",
    "datasette.*",
    "fiona.*",
    "rasterio.*",
    "geopandas.*",
    "shapely.*",
    "folium.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "--tb=short",
    "--cov=src/opengovzoning",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-report=xml",
    "--cov-report=json",
    "--cov-fail-under=95",
    "--durations=10",
    "--maxfail=5",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "e2e: marks tests as end-to-end tests",
    "performance: marks tests as performance tests",
    "security: marks tests as security tests",
]

[tool.coverage.run]
source = ["src/opengovzoning"]
branch = true
parallel = true
omit = [
    "*/tests/*",
    "*/test_*",
    "*/conftest.py",
    "*/migrations/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
known_first_party = ["opengovzoning"]
known_third_party = [
    "fastapi",
    "pydantic",
    "sqlalchemy",
    "alembic",
    "pytest",
    "uvicorn",
]

[tool.bandit]
exclude_dirs = ["tests", "migrations", "scripts"]
skips = ["B101", "B601"]  # Skip assert_used and shell_injection_subprocess (controlled usage)

[tool.radon]
exclude = "*/tests/*,*/migrations/*"
complexity = 10
rank = "C"

[tool.safety]
ignore = []

[tool.pydocstyle]
convention = "google"
add-ignore = ["D100", "D104", "D105", "D107"]

[tool.pip-tools]
requirements = ["requirements.txt"]
dev-requirements = ["requirements-dev.txt"]
generate-hashes = true
